configs/ingress-template.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  #labels:
  #garden.sapcloud.io/purpose: managed-cert
  name: $TEMP-query
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: "$AUTH_TYPE"
    nginx.ingress.kubernetes.io/auth-secret: $TEMP-tls
    nginx.ingress.kubernetes.io/auth-realm: "Login to your Jaeger"
    nginx.ingress.kubernetes.io/rewrite-target: /\$2
spec:
  rules:
    - host: $QUERY_URL
      http:
        paths:
          - path: /collector(/|$)(.*)
            backend:
              serviceName: $TEMP-jaeger-collector
              servicePort: 14268
          - path: /hotrod(/|$)(.*)
            backend:
              serviceName: $TEMP-hotrod
              servicePort: 80
          - path: /()(.*)
            backend:
              serviceName: $TEMP-jaeger-query
              servicePort: 80
  tls:
    - hosts:
        - $QUERY_URL
      secretName: $TEMP-tls-query
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/$TEMP-tls"
  name: $TEMP-collector
  namespace: default
spec:
  rules:
  - host: $COLLECTOR_URL
    http:
      paths:
      - backend:
          serviceName: $TEMP-jaeger-collector
          servicePort: 14250
  tls:
  - hosts:
    - $COLLECTOR_URL
    secretName: $TEMP-tls
---
